k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
        name: frontend
        namespace: app
        labels:
          app: frontend
    spec:
      containers:
        - name: frontend
          image: asia-northeast1-docker.pkg.dev/ksst-project-one/my-repository/vue-app:latest
          ports:
          - containerPort: 3001
          # livenessProbe:
          #   httpGet:
          #     port: 3001
          #     path: /
          #   failureThreshold: 5
          #   periodSeconds: 5
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
        name: backend
        namespace: app
        labels:
          app: backend
    spec:
      containers:
        - name: backend
          image: asia-northeast1-docker.pkg.dev/ksst-project-one/my-repository/python-api:latest
          ports:
          - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 200m
