k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend # Service(LoadBalancer) の名前
  namespace: app
spec:
  type: NodePort
  selector: # service のselctorは、matchLabels 扱いになる
    app: frontend # 転送先の Pod のラベル
  ports:
    - protocol: TCP
      port: 3001 # ServiceのIPでlistenするポート
      targetPort: 80 # コンテナでlistenしているPort番号のポート
