k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  labels:
    name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" # Create managed instance group as external load balancer automatically.
    kubernetes.io/ingress.global-static-ip-name: "app-lb" # Loadbalancer's IP address name in Google Cloud IP Address.
    kubernetes.io/ingress.allow-http: "false" # Only allow HTTPS connection between client and load balancer.
    networking.gke.io/managed-certificates: "app-managed-cert" # Apply ManagedCertificate to establish HTTPS connection.
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port: 
              number: 3001
      - pathType: Prefix
        path: /api/v1/test
        backend:
          service:
            name: backend
            port: 
              number: 5000
